--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Main</title>
-  <script src="main.js"></script>
+  <script src="build/main.js"></script>
 </head>
 
 <body>
